--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,5 +1,7 @@
+@import "./abstract/variaveis";
 @import "./components/base";
 @import "./components/header";
-@import "./abstract/variaveis";
 @import "./components/categorias";
+@import "./components/produtos";
 @import "./components/facilidades";
+@import "./components/rodape";
