update do projeto

--- a/styles/abstract/_variaveis.scss
+++ b/styles/abstract/_variaveis.scss
@@ -4,6 +4,7 @@ $preto: black;
 $branco: white;
 $verde-menu-humburger:#DAFF01;
 $cinza-claro: #6C757D;
+$cinza-escuro: #343A40;
 $cor-botao: #9353FF;
 
 //fontes da pagina
