--- a/styles/components/_facilidades.scss
+++ b/styles/components/_facilidades.scss
@@ -4,7 +4,7 @@
     flex-direction: column;
     justify-content: center;
     gap: 2em;
-    padding: 2.5em 1em;
+    padding: 2.5em;
     
 
     h2 {
