--- a/styles/components/_header.scss
+++ b/styles/components/_header.scss
@@ -1,11 +1,13 @@
-@mixin barra-menu() {
+@mixin barra-menu {
     height: 4px;
     width: 30px;
     background: white;
+    margin-bottom: 4px;
+    transition: 0.5s;
 }
 
 .container__header {
-    
+
     .cabecalho {
         display: flex;
         justify-content: space-between;
@@ -13,26 +15,69 @@
         height: 4rem;
         padding: 0 1rem;
         background: black;
-        
+
         .menu__hanburguer {
+            cursor: pointer;
 
-            #barra-1 {
-                @include barra-menu();
-            }
-
-            #barra-2 {
-                @include barra-menu();
-                margin: 5px 0
-            }
-
-            #barra-3 {
+            .barraMenu {
                 @include barra-menu();
             }
         }
 
-
         .container__navBar {
             display: none;
+            position: absolute;
+            color: $branco;
+            top: 0;
+            right: 0;
+            background: $cinza-escuro;
+            height: 220px;
+            width: 150px;
+            transition: 0.5s ease-in-out;
+
+            .navBar {
+                display: flex;
+                flex-direction: column;
+                padding: 1em 1.5em;
+                gap: 1em;
+
+                li {
+                    padding-bottom: 10px;
+                    border-bottom: 1px solid $branco;
+                    cursor: pointer;
+
+                    .fecharMenu {
+                        cursor: pointer;
+
+                        .barraMenuFechar {
+                            @include barra-menu();
+                            background: $verde-menu-humburger;
+                        }
+
+                        #barra-1 {
+                            transform: translateY(9px) rotate(-45deg);
+                        }
+
+                        #barra-2 {
+                            opacity: 0;
+                        }
+
+                        #barra-3 {
+                            transform: translateY(-7px) rotate(45deg);
+                        }
+                    }
+
+                    &:nth-child(1) {
+                        border-bottom: none;
+                        padding-bottom: 2px;
+                        text-align: right;
+                    }
+
+                    &:nth-last-child(1) {
+                        border-bottom: none;
+                    }
+                }
+            }
         }
     }
 
@@ -53,12 +98,19 @@
         }
 
         .botao__pesquisa {
-            background: white;
+            background: $branco;
             width: 100px;
             height: 40px;
             border: 1px solid black;
             font-weight: 500;
             font-size: $tamanho-da-fonte + 0.2;
+            transition: 0.3s;
+
+            &:hover {
+                background: $preto;
+                color: $branco;
+                transition: 0.6s;
+            }
         }
     }
 
