--- a/styles/components/_produtos.scss
+++ b/styles/components/_produtos.scss
@@ -45,6 +45,14 @@
             color: $branco;
             font-weight: 500;
             margin: 0 0 1em 1em;
+            transition: 0.3s;
+
+            &:hover {
+                background: $branco;
+                color: $cor-botao;
+                border: 1px solid $cor-botao;
+                transition: 0.6s;
+            }
         }
     }
 }
