--- a/styles/style.scss
+++ b/styles/style.scss
@@ -4,4 +4,5 @@
 @import "./components/categorias";
 @import "./components/produtos";
 @import "./components/facilidades";
+@import "./components/newletter";
 @import "./components/rodape";
