update do projeto

--- a/styles/components/_produtos.scss
+++ b/styles/components/_produtos.scss
@@ -46,6 +46,7 @@
             font-weight: 500;
             margin: 0 0 1em 1em;
             transition: 0.3s;
+            cursor: pointer;
 
             &:hover {
                 background: $branco;
