--- a/styles/style.scss
+++ b/styles/style.scss
@@ -6,3 +6,4 @@
 @import "./components/facilidades";
 @import "./components/newletter";
 @import "./components/rodape";
+@import "./components/responsivo";
