--- a/styles/components/_header.scss
+++ b/styles/components/_header.scss
@@ -105,6 +105,7 @@
             font-weight: 500;
             font-size: $tamanho-da-fonte + 0.2;
             transition: 0.3s;
+            cursor: pointer;
 
             &:hover {
                 background: $preto;
