--- a/styles/components/_rodape.scss
+++ b/styles/components/_rodape.scss
@@ -2,6 +2,9 @@
     background: $preto;
 
     .rodape__texto {
+        margin: 0 auto;
+        width: 19em;
+        line-height: 17px;
         color: $branco;
         text-align: center;
         padding: 2em 0;
