--- a/styles/style.css
+++ b/styles/style.css
@@ -95,6 +95,7 @@ html, body {
   font-weight: 500;
   font-size: 1.2rem;
   transition: 0.3s;
+  cursor: pointer;
 }
 .container__header .container__pesquisa .botao__pesquisa:hover {
   background: black;
@@ -162,6 +163,7 @@ html, body {
   font-weight: 500;
   margin: 0 0 1em 1em;
   transition: 0.3s;
+  cursor: pointer;
 }
 .container__produtos .produtos__itens .ver__mais:hover {
   background: white;
@@ -243,8 +245,113 @@ html, body {
   background: black;
 }
 .rodape .rodape__texto {
+  margin: 0 auto;
+  width: 19em;
+  line-height: 17px;
   color: white;
   text-align: center;
   padding: 2em 0;
   font-size: 0.8rem;
+}
+
+@media screen and (min-width: 768px) {
+  .container__header {
+    display: grid;
+  }
+  .container__header .cabecalho {
+    justify-content: unset;
+  }
+  .container__header .cabecalho .menu__hanburguer {
+    display: none;
+  }
+  .container__header .cabecalho .container__navBar {
+    display: flex;
+    width: 41%;
+    height: 50px;
+    background: none;
+    position: relative;
+  }
+  .container__header .cabecalho .container__navBar .navBar {
+    display: flex;
+    flex-direction: row;
+    padding: 16px 0;
+  }
+  .container__header .cabecalho .container__navBar .navBar li {
+    border-bottom: none;
+    white-space: nowrap;
+  }
+  .container__header .cabecalho .container__navBar .navBar li .fecharMenu {
+    display: none;
+  }
+  .container__header .container__pesquisa {
+    position: absolute;
+    top: 12px;
+    right: 8px;
+    padding: 0;
+  }
+  .container__header .container__pesquisa .pesquisa {
+    width: 130px;
+  }
+  .container__header .container__pesquisa .pesquisa::-moz-placeholder {
+    font-size: 0.7rem;
+  }
+  .container__header .container__pesquisa .pesquisa::placeholder {
+    font-size: 0.7rem;
+  }
+  .container__header .container__pesquisa .botao__pesquisa {
+    width: 70px;
+    height: 38px;
+    font-size: 0.9rem;
+    border: 1px solid white;
+    color: white;
+    background: black;
+  }
+  .container__header .container__pesquisa .botao__pesquisa:hover {
+    box-shadow: inset 3px 1px 35px 5px rgba(255, 255, 255, 0.5019607843);
+  }
+  .container__categoria {
+    grid-template-columns: repeat(3, auto);
+  }
+  .container__categoria h2 {
+    grid-column: 1/4;
+  }
+  .container__produtos {
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+    gap: 1em 0;
+  }
+  .container__produtos .titulo__produtos {
+    grid-column: 1/3;
+    padding-bottom: 1em;
+  }
+  .container__produtos .produtos__itens {
+    width: 45vw;
+  }
+  .container__produtos .produtos__itens img {
+    width: 45vw;
+  }
+  .container__facilidades h2 {
+    font-size: 2rem;
+  }
+  .container__facilidades .facilidades__itens img {
+    width: 70px;
+  }
+  .container__newletter {
+    padding: 1em 1em 3em 1em;
+  }
+  .container__newletter .texto__newletter {
+    font-size: 1.2rem;
+  }
+  .container__newletter .container__enviarEmail {
+    justify-content: center;
+  }
+  .container__newletter .container__enviarEmail .campo__email {
+    width: 50%;
+  }
+  .container__newletter .container__enviarEmail .botao__enviar {
+    width: 15%;
+  }
+  .rodape .rodape__texto {
+    width: 35em;
+  }
 }/*# sourceMappingURL=style.css.map */
