--- a/styles/style.css
+++ b/styles/style.css
@@ -119,6 +119,9 @@ html, body {
   font-weight: 500;
   padding: 0.8em 0;
 }
+.container__categoria .img__tablet {
+  display: none;
+}
 
 .container__produtos {
   display: flex;
@@ -315,6 +318,12 @@ html, body {
   .container__categoria h2 {
     grid-column: 1/4;
   }
+  .container__categoria .img__mobile {
+    display: none;
+  }
+  .container__categoria .img__tablet {
+    display: block;
+  }
   .container__produtos {
     display: grid;
     grid-template-columns: repeat(2, auto);
@@ -353,5 +362,61 @@ html, body {
   }
   .rodape .rodape__texto {
     width: 35em;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .container__categoria {
+    grid-template-columns: repeat(6, auto);
+  }
+  .container__categoria h2 {
+    grid-column: 1/7;
+  }
+  .container__categoria .img__mobile {
+    display: none;
+  }
+  .container__categoria .img__tablet {
+    display: block;
+  }
+  .container__produtos {
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+    gap: 1em 0;
+  }
+  .container__produtos .titulo__produtos {
+    grid-column: 1/4;
+    padding-bottom: 1em;
+  }
+  .container__produtos .produtos__itens {
+    width: 30vw;
+  }
+  .container__produtos .produtos__itens img {
+    width: 30vw;
+  }
+  .container__facilidades {
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+    gap: 1em 2em;
+  }
+  .container__facilidades h2 {
+    font-size: 2rem;
+    grid-column: 1/4;
+  }
+  .container__facilidades .facilidades__itens img {
+    width: 70px;
+  }
+  .container__newletter {
+    width: 50%;
+  }
+  .container__newletter .texto__newletter {
+    font-size: 1.2rem;
+  }
+  .container__newletter .container__enviarEmail {
+    justify-content: center;
+  }
+  .container__newletter .container__enviarEmail .campo__email {
+    width: 55%;
+  }
+  .container__newletter .container__enviarEmail .botao__enviar {
+    width: 10%;
   }
 }/*# sourceMappingURL=style.css.map */
