--- a/styles/style.scss
+++ b/styles/style.scss
@@ -6,4 +6,6 @@
 @import "./components/facilidades";
 @import "./components/newletter";
 @import "./components/rodape";
+@import "./components/modalProdutos";
+@import "./components/modalEmailCadastrado";
 @import "./components/responsivo";
