--- a/styles/abstract/_variaveis.scss
+++ b/styles/abstract/_variaveis.scss
@@ -6,6 +6,8 @@ $verde-menu-humburger:#DAFF01;
 $cinza-claro: #6C757D;
 $cinza-escuro: #343A40;
 $cor-botao: #9353FF;
+$rosa-banner: #F58D90;
+$laranja-banner: #F87F46;
 
 //fontes da pagina
 
